--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /terraform.tfstate
 /terraform.tfstate.backup
 /terraform.tfvars
+.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.62.0/windows_amd64/terraform-provider-azurerm_v3.62.0_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.85.0/windows_amd64/terraform-provider-azurerm_v3.85.0_x5.exe
